--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,53 @@
   align-content: stretch;
 }
 
+.posts-container {
+  width: 100%;
+}
+
+.new-post-form {
+  background-color: #53c4f7;
+  border: 5px solid #005f56;
+  width: 100%;
+}
+
+.posts {
+  padding: 20px;
+  width: 100%;
+  float: left;
+}
+
+.post {
+  width: 45%;
+  float: left;
+  background-color: #ffee58;
+  padding: 20px;
+  border: 5px solid #1c2566;
+}
+
+.edit-post-form {
+  background-color: #ffb300;
+  padding: 20px;
+  border: 5px solid #d81b60;
+}
+
+.comments-container {
+  background-color: #388e3c;
+  width: 100%;
+  border: 5px solid #29b6f6;
+}
+
+.comments {
+  background-color: #d32f2f;
+  padding: 5px;
+}
+
+.comment {
+  background-color: #1565c0;
+  padding: 10px;
+  border: 2px solid #ffa533;
+}
+
 .collections-container {
   width: 100%;
 }
