Change background color to orange

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,7 +119,7 @@
 }
 
 .new-item-form {
-  background-color: #35baf6;
+  background-color: #FFA726;
   border: 5px solid #205723;
   width: 100%;
 }
