Add CSS for EditItemForm and add Material-UI TextField and Button components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,6 +124,12 @@
   width: 100%;
 }
 
+.edit-item-form {
+  background-color: #CDDC39;
+  border: 5px solid #4DD0E1;
+  width: 100%;
+}
+
 .reviews-container {
   background-color: #ff9800;
   width: 100%;
