Finalize styling to use flex display

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,61 +10,55 @@
 
 .new-post-form {
   background-color: #53c4f7;
-  border: 5px solid #005f56;
   width: 100%;
-  padding: 20px;
+}
+
+.posts {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
 }
 
 .post {
   width: 100%;
-  float: left;
+  flex: 1;
   background-color: #ffee58;
-  padding: 20px;
-  border: 5px solid #1c2566;
 }
 
 .post-title {
-  border: 5px solid #f57c00;
   background-color: #ffff33;
 }
 
 .post-content {
-  border: 5px solid #42a5f5;
   background-color: #87f3be;
 }
 
 .edit-post-form {
   background-color: #ffb300;
-  padding: 20px;
-  border: 5px solid #d81b60;
+  width: 100%;
 }
 
 .comments-container {
   background-color: #388e3c;
   width: 100%;
-  border: 5px solid #29b6f6;
 }
 
 .comments {
   background-color: #d32f2f;
-  padding: 5px;
 }
 
 .comment {
   background-color: #1565c0;
-  padding: 10px;
-  border: 2px solid #ffa533;
 }
 
 .new-comment-form {
   background-color: #51d1e1;
-  border: 5px solid #949d3c;
   width: 100%;
 }
 
 .edit-comment-form {
   background-color: #FF4081;
-  border: 5px solid #0D47A1;
   width: 100%;
 }
 
@@ -74,95 +68,78 @@
 
 .new-collection-form {
   background-color: #81d4fa;
-  border: 5px solid #d32f2f;
   width: 100%;
 }
 
 .collections {
   width: 100%;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column;
   justify-content: space-evenly;
 }
 
 .collection {
-  flex: 1 1 auto;
-  width: 49%;
+  flex: 1;
+  width: 100%;
   background-color: #2979FF;
-  border: 5px solid #795548;
 }
 
 .edit-collection-form {
   background-color: #FF5722;
-  padding: 20px;
-  border: 5px solid #00E676;
+  width: 100%;
 }
 
 .items-container {
   background-color: #E040FB;
   width: 100%;
-  border: 5px solid #ffe082;
 }
 
 .items {
   background-color: #381f75;
-  padding: 5px;
 }
 
 .item {
   background-color: #26a69a;
-  padding: 10px;
-  border: 2px solid #ef5350;
 }
 
 .new-item-form {
   background-color: #FFA726;
-  border: 5px solid #205723;
   width: 100%;
 }
 
 .edit-item-form {
   background-color: #CDDC39;
-  border: 5px solid #4DD0E1;
   width: 100%;
 }
 
 .reviews-container {
   background-color: #ff9800;
   width: 100%;
-  border: 5px solid #c2185b;
 }
 
 .reviews {
   background-color: #512da8;
-  padding: 5px;
 }
 
 .review {
   background-color: #fdd835;
-  padding: 10px;
-  border: 2px solid #388e3c;
 }
 
 .new-review-form {
   background-color: #ed4b82;
-  border: 5px solid #76ff03;
   width: 100%;
 }
 
 .edit-review-form {
   background-color: #B2DFDB;
-  border: 5px solid #4FC3F7;
   width: 100%;
 }
 
 .App-header {
   background-color: #2979FF;
   height: 80px;
-  padding: 20px;
   width: 100%;
   color: #4A148C;
-  border: 5px solid #b2102f;
 }
 
 .navbar {
@@ -171,9 +148,10 @@
 }
 
 .App-title {
-  font-size: 2.0em;
+  font-size: 2.5em;
   width: 100%;
-  border: 5px solid #00e676;
+  height: 60px;
+  padding-top: 20px;
   background-color: #33eaff;
 }
 
