--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,10 @@
   background-color: #2979FF;
 }
 
+.collection-name {
+  background-color: #2196F3;
+}
+
 .edit-collection-form {
   background-color: #FF5722;
   width: 100%;
@@ -139,7 +143,7 @@
   background-color: #2979FF;
   height: 80px;
   width: 100%;
-  color: #4A148C;
+  color: #1B5E20;
 }
 
 .navbar {
@@ -149,10 +153,11 @@
 
 .App-title {
   font-size: 2.5em;
+  font-weight: 800;
   width: 100%;
   height: 60px;
   padding-top: 20px;
-  background-color: #33eaff;
+  background-color: #EEFF41;
 }
 
 .App-intro {
