--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #ECEFF1;
+  font-family: 'Roboto', sans-serif;
+  background-color: #76FF03;
 }
